# pyzig

./: .gitignore  README.md  build.zig  build.zig.zon  build_python_library.sh  pyproject.toml
pyzig/: __init__.py  summodule.pyi  zigmodule.pyi
src/: c.zig  root.zig  summodule.zig  zigmodule.zig
tests/: test_sum.py  test_summodule.py  test_zigmodule.py
