[project]
name = "pyzig"
version = "0.1.0"
description = "Python module written in Zig!"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
include = ["pyzig/", "tests/"]


[tool.hatch.build.targets.wheel]
packages = ["pyzig"]
artifacts = ["*.so", "*.dll"]
