[project]
name = "pyzig"
version = "0.1.0"
description = "Python module written in Zig!"
requires-python = "~=3.11"

[build-system]
requires = ["hatchling", "build"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["pyzig/", "tests/"]

[tool.hatch.build.targets.wheel]
packages = ["pyzig"]
artifacts = ["*.so", "*.dll"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "build>=1.2.2.post1",
    "hatch>=1.13.0",
    "ruff>=0.8.2",
    "ziglang~=0.13.0",
]
