[project]
name = "pyzig"
version = "0.1.0"
description = "Python module written in Zig!"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["pyzig", "src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["pyzig"]
artifacts = ["*.so", "*.dll"]

[dependency-groups]
dev = [
    "hatch>=1.13.0",
    "ruff>=0.8.2",
]
zig = [
    "ziglang==0.15.2",
]
